--- a/index.html
+++ b/index.html
@@ -3,84 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Notification Sign-Up</title>
+    <title>Submit Form</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-        }
-        form {
-            background: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        input[type="text"], select {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        input[type="submit"] {
-            background: #28a745;
-            color: white;
-            border: none;
-            padding: 10px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        input[type="submit"]:hover {
-            background: #218838;
-        }
+        /* ... */
     </style>
 </head>
 <body>
+    <div class="container">
+        <h1>Submit Your Information</h1>
+        <form id="submit-form" action="https://formspree.io/f/xbljbzkb" method="POST">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
 
-    <form id="dataForm">
-        <h2>Weather Notification Sign-Up</h2>
-        <input type="text" id="phoneNumber" placeholder="Phone Number" required>
-        <input type="text" id="city" placeholder="City" required>
-        <input type="text" id="country" placeholder="Country" required>
-        <select id="interval" required>
-            <option value="" disabled selected>Select Interval</option>
-            <option value="day">Daily</option>
-            <option value="week">Weekly</option>
-            <option value="month">Monthly</option>
-        </select>
-        <input type="submit" value="Submit">
-    </form>
+            <label for="phone">Phone Number:</label>
+            <input type="tel" id="phone" name="phone" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
 
+            <label for="country">Country:</label>
+            <input type="text" id="country" name="country" required>
+
+            <label for="city">City:</label>
+            <input type="text" id="city" name="city" required>
+
+            <label for="interval">Interval:</label>
+            <select id="interval" name="interval" required>
+                <option value="day">Day</option>
+                <option value="week">Week</option>
+                <option value="month">Month</option>
+            </select>
+
+            <button type="submit">Submit</button>
+        </form>
+    </div>
     <script>
-        document.getElementById('dataForm').addEventListener('submit', function(event) {
+        document.getElementById('submit-form').addEventListener('submit', async (event) => {
             event.preventDefault();
-            const phoneNumber = document.getElementById('phoneNumber').value;
-            const city = document.getElementById('city').value;
-            const country = document.getElementById('country').value;
-            const interval = document.getElementById('interval').value;
 
-            fetch('https://script.google.com/macros/s/AKfycbxAU2Vlmlb9TezavJDh9cCoPiJe1Vynkj_nKALFQPgCtodV04nmWqjdoUkb7sDpXzh6Kw/exec', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ phoneNumber: phoneNumber, city: city, country: country, interval: interval })
-            })
-            .then(response => response.json())
-            .then(data => {
-                alert('Data submitted successfully!');
-                document.getElementById('dataForm').reset();
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('There was an error submitting your data.');
-            });
+            const name = document.getElementById('name').value.trim();
+            const phone = document.getElementById('phone').value.trim();
+            const country = document.getElementById('country').value.trim();
+            const city = document.getElementById('city').value.trim();
+            const interval = document.getElementById('interval').value.trim();
+
+            const data = {
+                name,
+                phone,
+                country,
+                city,
+                interval
+            };
+
+            try {
+                const response = await fetch(event.target.action, {
+                    method: 'POST',
+                    headers: {
+                        'Accept': 'application/json',
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(data)
+                });
+                if (response.ok) {
+                    alert('Submission successful!');
+                    document.getElementById('submit-form').reset();
+                } else {
+                    throw new Error('Submission failed.');
+                }
+            } catch (error) {
+                alert('An error occurred while submitting the form.');
+                console.error(error);
+            }
         });
     </script>
-
 </body>
 </html>
